--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,13 @@ include/
 lib/
 *.cfg
 
+#ignore compiled files
+__pycache__/
+.pytest_cache/
+
+#ignore system generated files
+**.DS_Store**/
+
 #ignore json files
 *.json
 
